--- a/AreaPubblica/Views/ComeFunziona/Index.cshtml
+++ b/AreaPubblica/Views/ComeFunziona/Index.cshtml
@@ -1,10 +1,8 @@
-﻿<div style="height:15vh;"></div>
-
-<div class="container mt-2 mb-5">
+﻿
+<div class="container mb-5" style="padding-top: 120px;">
 	<div class="row">
-		<!-- Colonna testo -->
-		<div class="col-lg-8 col-md-12">
 			<h1>Come Funziona?</h1>
+		<div class="col-md-8">
 			<p>
 				Studiare con la nostra università online è semplice e flessibile. <br>
 				Una volta iscritto, accedi a una piattaforma digitale dove trovi video lezioni, materiali didattici e supporto costante da parte di tutor qualificati. <br />
@@ -13,7 +11,6 @@
 			</p>
 
 			<div class="accordion shadow-sm rounded mt-4" id="accordionFunziona">
-				<!-- Punto 1 -->
 				<div class="accordion-item">
 					<h2 class="accordion-header" id="heading1">
 						<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -49,7 +46,6 @@
 					</div>
 				</div>
 
-				<!-- Punto 2 -->
 				<div class="accordion-item">
 					<h2 class="accordion-header" id="heading2">
 						<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -64,7 +60,6 @@
 					</div>
 				</div>
 
-				<!-- Punto 3 -->
 				<div class="accordion-item">
 					<h2 class="accordion-header" id="heading3">
 						<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -81,7 +76,6 @@
 					</div>
 				</div>
 
-				<!-- Punto 4 -->
 				<div class="accordion-item">
 					<h2 class="accordion-header" id="heading4">
 						<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -96,7 +90,6 @@
 					</div>
 				</div>
 
-				<!-- Punto 5 -->
 				<div class="accordion-item">
 					<h2 class="accordion-header" id="heading5">
 						<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -111,7 +104,6 @@
 					</div>
 				</div>
 
-				<!-- Punto 6 -->
 				<div class="accordion-item">
 					<h2 class="accordion-header" id="heading6">
 						<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -126,7 +118,6 @@
 					</div>
 				</div>
 
-				<!-- Punto 7 -->
 				<div class="accordion-item">
 					<h2 class="accordion-header" id="heading7">
 						<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -143,7 +134,6 @@
 			</div>
 		</div>
 
-		<!-- Colonna immagine -->
 		<div class="col-lg-4 col-md-12 mt-4 text-center">
 			<img src="~/sources/gettyimages-1177384544-2048x2048.jpg" class="img-fluid rounded shadow-sm"
 				 style="max-height:500px; object-fit:cover;" alt="Università online" />
