--- a/AreaLavoroStudente/MasterPage.master
+++ b/AreaLavoroStudente/MasterPage.master
@@ -10,6 +10,10 @@
     <title></title>
 
     <style>
+        .navbar-nav .nav-item {
+            margin-left: 10px; /* Ridurre il margine se troppo largo */
+        }
+
         .navbar-custom {
             background-color: #12304F;
         }
