--- a/AreaPubblica/Views/Shared/_Layout.cshtml
+++ b/AreaPubblica/Views/Shared/_Layout.cshtml
@@ -34,9 +34,9 @@
 			right: 0; /* Posiziona il link a destra */
 		}
 
-		/* .custom-vh {
-			min-height: 100vh;
-		} */
+		.custom-vh {
+			min-height: 78vh;
+		} 
 
 		footer {
 			position: absolute;
@@ -47,16 +47,6 @@
 			bottom: 0;
 		}
 
-		html {
-			height:100%;
-		}
-
-		body {
-			height: 100%;
-			margin: 0;
-			position: relative;
-			padding-bottom: 6.74rem;
-		}
 
 	</style>
 
@@ -177,7 +167,7 @@
 			@RenderBody()
 		</main>
 	</div>
-	@* <div class="d-flex flex-column mt-3 mb-3" style="height: 10vh;"></div> *@
+	<div class="d-flex flex-column mt-3 mb-3" style="height: 15vh;"></div>
 
 	<footer class="bg-dark text-white mt-auto">
 		<div class="bg-dark text-white mt-auto">
