--- a/Comunicazioni/Views/Comunicazioni/List.cshtml
+++ b/Comunicazioni/Views/Comunicazioni/List.cshtml
@@ -12,7 +12,8 @@
 			<table class="table">
 				<thead>
 					<tr>
-						<th>Ruolo Mittente</th>
+						<th>Mittente</th>
+						<th>Destinatario</th>
 						<th>Comunicazione</th>
 					</tr>
 				</thead>
@@ -36,6 +37,29 @@
 										else
 										{
 											<span class="text-primary">Amministrazione</span>
+										}
+									}
+								}
+							</td>
+							<td>
+								@{
+									if (primaComunicazione != null)
+									{
+										if (primaComunicazione.DocenteDestinatario != null)
+										{
+											<span class="text-warning">@($"{primaComunicazione.DocenteDestinatario.Nome} {primaComunicazione.DocenteDestinatario.Cognome}")</span>
+										}
+										else if (primaComunicazione.StudenteDestinatario != null)
+										{
+											<span class="text-info">@($"{primaComunicazione.StudenteDestinatario.Nome} {primaComunicazione.StudenteDestinatario.Cognome}")</span>
+										}
+										else if (primaComunicazione.K_Studente.HasValue && primaComunicazione.K_Studente == Guid.Parse(Context.Session.GetString("cod")))
+										{
+											<span class="text-info">Me</span>
+										}
+										else
+										{
+											<span class="text-secondary">Amministrazione</span>
 										}
 									}
 								}
