--- a/AreaDocente/Views/Home/Index.cshtml
+++ b/AreaDocente/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
         </div>
          <hr />
 
-        <div class="row gy-4 gx-md-2 gx-lg-0 justify-content-around">
+		<div class="row gy-4 gx-md-2 gx-lg-0 justify-content-md-around justify-content-lg-between">
 
             <div class="col-12 col-md-4 col-lg-2 d-flex align-items-stretch">
                 <div class="card shadow">
