Correto nome campo tabella

--- a/Comunicazioni/Views/Comunicazioni/List.cshtml
+++ b/Comunicazioni/Views/Comunicazioni/List.cshtml
@@ -12,7 +12,7 @@
 			<table class="table">
 				<thead>
 					<tr>
-						<th>Ruolo Mittente</th>
+						<th>Mittente</th>
 						<th>Comunicazione</th>
 					</tr>
 				</thead>
