--- a/AreaPubblica/Views/Didattica/Seduta.cshtml
+++ b/AreaPubblica/Views/Didattica/Seduta.cshtml
@@ -1,18 +1,10 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@* View Sedute di Laurea *@
 
 <div class="container" style="padding-top: 120px;">
-	<div class="row">
-		<div class="col-12">
-			<h1>Sedute di Laurea</h1>
-		</div>
-	</div>
+	<h1 class="mb-4">Sedute di Laurea</h1>
 
-	<div class="row mt-4">
-		<!-- Colonna contenuto -->
+	<div class="row">
+		<!-- Colonna principale -->
 		<div class="col-md-8">
 			<h2 class="mt-4">Cerimonia di laurea triennale</h2>
 			<p class="mt-3">
@@ -27,8 +19,8 @@
 			<div class="accordion shadow-sm rounded mt-4" id="faqAccordion">
 				<div class="accordion-item">
 					<h2 class="accordion-header" id="heading1">
-						<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1"
-								aria-expanded="false" aria-controls="collapse1">
+						<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+								data-bs-target="#collapse1" aria-expanded="false" aria-controls="collapse1">
 							Venerdì 9 maggio 2025, ore 10:00
 						</button>
 					</h2>
@@ -64,6 +56,7 @@
 				</div>
 			</div>
 
+			<!-- Seconda sezione -->
 			<h2 class="mt-5">Disposizioni per l'accesso</h2>
 			<p class="mt-3">
 				Laureati e laureate si dovranno presentare in Piazza, accompagnati al massimo da due persone, alle quale verrà assegnato un posto a sedere nell'area dedicata agli ospiti.<br />
@@ -77,8 +70,8 @@
 		</div>
 
 		<!-- Colonna immagine -->
-		<div class="col-md-4 d-none d-md-flex align-items-start">
-			<div style="position: sticky; top: 80px;">
+		<div class="col-md-4 d-flex align-items-start">
+			<div style="top: 80px;">
 				<img src="~/sources/sedut.jpg" class="img-fluid rounded shadow" alt="Cerimonia di laurea" />
 			</div>
 		</div>
