--- a/AreaPubblica/Views/Didattica/Seduta.cshtml
+++ b/AreaPubblica/Views/Didattica/Seduta.cshtml
@@ -1,6 +1,6 @@
 ﻿@* View Sedute di Laurea *@
 
-<div class="container" style="padding-top: 120px;">
+<div class="container mb-5" style="padding-top: 120px;">
 	<h1 class="mb-4">Sedute di Laurea</h1>
 
 	<div class="row">
