--- a/AreaPubblica/Views/Didattica/Index.cshtml
+++ b/AreaPubblica/Views/Didattica/Index.cshtml
@@ -1,14 +1,10 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿<div style="padding-top: 120px;"></div>
 
-<div style="padding-top: 120px;"></div>
-@* <div class="container"> *@
+<div class="container">
 	<div class="row">
-		<div class="col-2"></div>
-		<div class="col-7">
+		<!-- Colonna testo -->
+		<div class="col-md-8">
 			<h1>Calendario accademico e appelli d'esame</h1>
-
 
 			<h2 class="mt-4">Lauree e lauree magistrali</h2>
 			<h5 class="mt-3">
@@ -21,58 +17,55 @@
 				<li>Chiusure di Ateneo</li>
 			</ul>
 
-			<div class="card mt-3 mb-3 shadow-sm rounded" style="width: 100%;">
+			<!-- Schede -->
+			@* Puoi eventualmente racchiudere queste card in un ciclo se provengono da dati dinamici *@
+			<div class="card mt-3 mb-3 shadow-sm rounded">
 				<div class="card-body">
 					<h5 class="card-title fw-bold">01 Maggio 2025</h5>
 					<p class="card-text">Inizio Chiusura di Ateneo (fino al <b>02/05/2025</b>)</p>
 				</div>
 			</div>
-
-			<div class="card mt-3 mb-3 shadow-sm rounded" style="width: 100%;">
+			<div class="card mt-3 mb-3 shadow-sm rounded">
 				<div class="card-body">
 					<h5 class="card-title fw-bold">07 Maggio 2025</h5>
 					<p class="card-text">Fine II semestre</p>
 				</div>
 			</div>
-
-			<div class="card mt-3 mb-3 shadow-sm rounded" style="width: 100%;">
+			<div class="card mt-3 mb-3 shadow-sm rounded">
 				<div class="card-body">
 					<h5 class="card-title fw-bold">19 Maggio 2025</h5>
 					<p class="card-text">Inizio Recupero lezioni II semestre (fino al <b>24/05/2025</b>)</p>
 				</div>
 			</div>
-
-			<div class="card mt-3 mb-3 shadow-sm rounded" style="width: 100%;">
+			<div class="card mt-3 mb-3 shadow-sm rounded">
 				<div class="card-body">
 					<h5 class="card-title fw-bold">26 Maggio 2025</h5>
 					<p class="card-text">Inizio Sessione esami maggio-giugno - area economica/umanistica (fino al <b>21/06/2025</b>)</p>
 				</div>
 			</div>
-
-			<div class="card mt-3 mb-3 shadow-sm rounded" style="width: 100%;">
+			<div class="card mt-3 mb-3 shadow-sm rounded">
 				<div class="card-body">
 					<h5 class="card-title fw-bold">26 Maggio 2025</h5>
 					<p class="card-text">Inizio Sessione esami maggio-giugno - area linguistica/scientifica (fino al <b>28/06/2025</b>)</p>
 				</div>
 			</div>
-
-			<div class="card mt-3 mb-3 shadow-sm rounded" style="width: 100%;">
+			<div class="card mt-3 mb-3 shadow-sm rounded">
 				<div class="card-body">
 					<h5 class="card-title fw-bold">21 Giugno 2025</h5>
 					<p class="card-text">Fine Sessione esami <b>maggio-giugno</b> - area economica/umanistica</p>
 				</div>
 			</div>
-
-			<div class="card mt-3 mb-3 shadow-sm rounded" style="width: 100%;">
+			<div class="card mt-3 mb-3 shadow-sm rounded">
 				<div class="card-body">
 					<h5 class="card-title fw-bold">28 Giugno 2025</h5>
 					<p class="card-text">Fine Sessione esami <b>maggio-giugno</b> - area linguistica/scientifica</p>
 				</div>
 			</div>
-
 		</div>
-		<div class="col-3" style="top: 80px;">
-		<img style="margin-left: 5%; margin-top: 20%; width: 80%;" src="~/sources/calend.jpg" class="img-fluid rounded shadow" alt="Calendario accademico" />
+
+		<!-- Colonna immagine -->
+		<div class="col-md-4 d-flex align-items-start">
+			<img src="~/sources/calend.jpg" class="img-fluid rounded shadow" alt="Calendario accademico" />
 		</div>
 	</div>
 </div>
