--- a/AreaAmministrazione/MasterPage.master
+++ b/AreaAmministrazione/MasterPage.master
@@ -93,10 +93,24 @@
 
             <!-- Main content -->
             <main class="main-content">
-                <div class="d-flex justify-content-end">
-                    <asp:Label ID="lblNomeUtente" runat="server" CssClass="fw-bold"></asp:Label>   
-                    <a href="https://localhost:7272/" class="btn btn-danger ms-4"><i class="bi bi-box-arrow-right"></i>Logout</a>
+                <div class="row ">
+                    <div class="col-9"></div>
+                    <div class="col-3 d-flex align-items-center justify-content-end">
+                        <a class="btn btn-light disabled me-2">
+                            <i class="bi bi-person-circle"></i>
+                        </a>
+                        <asp:Label ID="lblNomeUtente" runat="server" CssClass="fw-bold"></asp:Label>
+
+                        <a href="https://localhost:7272/" class="btn btn-danger ms-4"><i class="bi bi-box-arrow-right"></i>Logout</a>
+                    </div>
                 </div>
+                <%--<div class="d-flex align-items-center justify-content-end">
+                    <a class="btn btn-light disabled me-2">
+                        <i class="bi bi-person-circle"></i>
+                    </a>
+                    <asp:Label ID="lblNomeUtente" runat="server" CssClass="fw-bold"></asp:Label>
+                    <a href="https://localhost:7272/" class="btn btn-danger ms-4"><i class="bi bi-box-arrow-right"></i>Logout</a>
+                </div>--%>
                 <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
                 </asp:ContentPlaceHolder>
             </main>
