--- a/AreaPubblica/Views/Didattica/Index.cshtml
+++ b/AreaPubblica/Views/Didattica/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿<div style="padding-top: 120px;"></div>
 
-<div class="container">
+<div class="container mb-5">
 	<div class="row">
 		<!-- Colonna testo -->
 		<div class="col-md-8">
