--- a/AreaStudente/Views/Studenti/Immatricolati.cshtml
+++ b/AreaStudente/Views/Studenti/Immatricolati.cshtml
@@ -76,7 +76,7 @@
 							</div>
 							<div class="col-12 col-lg-3 mb-2 mb-lg-0">
 								<label class="form-label form-control-label">CAP</label>
-								<input type="text" asp-for="CAP" class="form-control form-control-alternative" pattern="\d*" inputmode="numeric" maxlength="5" required />
+								<input type="text" asp-for="CAP" class="form-control form-control-alternative" maxlength="5" required />
 							</div>
 						</div>
 
@@ -90,26 +90,14 @@
 								<input type="text" asp-for="Provincia" class="form-control text-uppercase form-control-alternative" maxlength="2" required />
 							</div>
 						</div>
-
-						@if (ViewData.ModelState.IsValid && @Model.K_Corso.ToString() != "")
-						{
-							<div class="text-center">
-								<button type="submit" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#confermaModal">Procedi</button>
-							</div>
-						}else
-						{
-							<div class="text-center">
-								<button type="submit" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#confermaModal" disabled>Procedi</button>
-							</div>
-						}
+						<div class="text-center">
+							<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#confermaModal">Procedi</button>
+						</div>
 					</div>
 				</div>
 			</div>
 
 			<!-- Modal -->
-
-
-
 			<div class="modal fade" id="confermaModal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
 				<div class="modal-dialog">
 					<div class="modal-content">
@@ -122,9 +110,8 @@
 							<p>L'importo è: €@Model.Importo</p>
 							<div id="paypal-button-container" class="mt-3"></div>
 						</div>
-						<div class="modal-footer d-flex justify-content-center">
+						<div class="modal-footer d-flex justify-content-between">
 							<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annulla</button>
-							<!-- Bottone Conferma disabilitato, il pagamento avvia l'immatricolazione -->
 							<button type="button" class="btn btn-primary d-none" id="conferma-btn">Conferma</button>
 						</div>
 					</div>
